--- a/foundations/intro-to-css/02-class-id-selectors/style.css
+++ b/foundations/intro-to-css/02-class-id-selectors/style.css
@@ -1,1 +1,21 @@
 /* Add CSS Styling */
+
+.odd {
+  background-color: rgb(250, 171, 239);
+  font-family: "Verdana", DejaVu Sans, sans-serif;
+}
+
+#second {
+  color: rgb(20, 20, 209);
+  font-size: 36px;
+}
+
+#third {
+  font-size: 24px;
+}
+
+#fourth {
+  background-color: rgb(125, 184, 125);
+  font-size: 24px;
+  font-weight: bold;
+}
